@@ -6,6 +6,7 @@ cdebconf (0.80) UNRELEASED; urgency=low
     - Use question_db_new instance parameter in debconf-copydb and
       debconf-dumpdb rather than messing with the DEBCONF_CONFIG environment
       variable.
+    - Constify question_db_new instance parameter.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 15 Jun 2005 16:16:34 +0100
 
